[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/player/player.gd" type="Script" id=1]

[node name="KinematicBody" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
current = true
fov = 170.0
size = 0.2
near = 0.01

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="rotate_t" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="rotate_t" to="." method="_on_rotate_t_timeout"]
